@@ -29,14 +29,14 @@ bgcolor="#EDEDED" style="width: 100%;">
 <td valign="middle"><a href="index.html">Welcome</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="index.html#Intended_audience">Intended
+<td valign="top"><a href="intended_audience.html">Intended
 audience</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="index.html#Goals">Goals</a><br></td>
+<td valign="top"><a href="goals.html">Goals</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="index.html#How_you_can_help">How you can
+<td valign="top"><a href="how_you_can_help.html">How you can
 help</a><br></td>
 </tr>
 <tr>
