@@ -63,18 +63,43 @@ project page</a></td>
 </td>
 <td valign="top">
 <div align="justify">
-<h1>Progress...</h1>
-<p>
-Some progress has been made inthe design of the language, but feed-back is 
-still painfully lacking. Hence, you will find some important messages, as 
-sent to the jail-ust-lang discussion group below.
-</p>
-<hr>
-<h2>The grammar definition</h2>
-<p>
-The original message can be found <a href="grammar.msg">here</a><br>
-The grammar being discussed is <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/jail-ust/compiler/parse.y?rev=1.1&content-type=text/vnd.viewcvs-markup">here</a><br>
-</p>
+<h2><a name="How_you_can_help"></a>How you can help</h2>
+<p>The language (Jail) and the programs that implement it are a
+work in progress. We need</p>
+<ul>
+<li>People from the intended audience<br>
+Meaning people who may not know the difference between "Word" and
+"Windows", may never have programmed anything in their lives but
+want their computers to simply behave.<br>
+If you want to automate a task on your computer but you don't know
+how to do it - you're part of the intended audience!</li>
+<li>More people from the intended audience<br>
+Meaning people who know how to program, perhaps make a living doing
+so, but want to learn and help create a new programming language
+designed to</li>
+<li style="list-style: none">
+<ul>
+<li>make object-oriented programming easy</li>
+<li>make self-modifying code a piece of cake</li>
+<li>be portable</li>
+<li>be easy to learn</li>
+</ul>
+</li>
+<li>Yet more people from the intended audience<br>
+i.e. anyone between the two beforementioned groups</li>
+<li>Programmers who want to help make the preprocessor, compiler
+and/or virtual machine</li>
+<li>Linguists who want to help define the language</li>
+<li>Biologists who want to use the language for DNA sequence
+analysis</li>
+<li>Lawyers who want to use the language to keep track of their
+bibliography</li>
+<li>Managers and marketers who want to use it to manage
+databases</li>
+<li>everybody else!</li>
+</ul>
+<p>We need all those people to put their heads together and define
+the language we call Jail.</p>
 </div>
 </td>
 </tr>
@@ -84,4 +109,3 @@ The grammar being discussed is <a href="http://cvs.sourceforge.net/cgi-bin/viewc
 <br>
 </body>
 </html>
-
