@@ -27,7 +27,7 @@ bgcolor="#EDEDED" style="width: 100%;">
 <tbody>
 <tr>
 <td valign="middle"><a href=
-"#Welcome_to_the_JAIL_home_page.">Welcome</a><br></td>
+"index.html#Welcome_to_the_JAIL_home_page.">Welcome</a><br></td>
 </tr>
 <tr>
 <td valign="top"><a href="intended_audience.html">Intended
@@ -44,7 +44,8 @@ help</a><br></td>
 <td valign="top"><a href="design.html">Language design</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="tech_arch.html">Technical architecture</a></td>
+<td valign="top"><a href="tech_arch.html">Technical
+architecture</a></td>
 </tr>
 <tr>
 <td valign="top"><a href="progress.html">Progress</a></td>
@@ -62,21 +63,15 @@ project page</a></td>
 </td>
 <td valign="top">
 <div align="justify">
-<h1><a name="Welcome_to_the_JAIL_home_page."></a>Welcome to
-JAIL</h1>
-<p>Jail is Just Another Interpreted Language, and Uses Silly Terms.
-So if you're wondering why Jail is called Jail: it's a
-double-recursive acronym. Just one of the things the OLOCA made me
-do.. (If you don't know what the OLOCA is, look <a href=
-"http://cygwin.com/acronyms/#OLOCA">here</a>).</p>
-<a href="http://sourceforge.net"></a>
-<p>The Jail project is hosted by SourceForge.</p>
-<p>If you came here looking for a full-fledged, ready-to-deploy
-interpreted language, you're out of luck: have a look at Perl,
-Ruby, Python, or some other interpreted language in stead.</p>
-<p>If you came here looking to join the effort of defining a new
-interpreted language with ambitous goals, you're exactly where
-you're supposed to be.</p>
+<h2><a name="Intended_audience"></a>Intended audience</h2>
+<p>The intended audience of the Jail language is the part of
+humanity that wants to use a computer without knowing how it works,
+which (I believe) goes for the vast majority of people.</p>
+<p>For most people, the Bash shell is too complicated; Perl, Ruby
+and Python are beyond reach; C and Pascal are way too complicated
+and C++ and Java are beyond their wildest dreams.</p>
+<p>Jail is intended for those people for whom an accessible
+language is not available at this time.</p>
 </div>
 </td>
 </tr>
